# Temp-Mail-by-d3rrk1a

./: README  README.md  by d3rrk1a for you
python/: main.py  requirements.txt
rust/: Cargo.toml
rust/src/: main.rs
