[package]
name = "tempmail_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
crossterm = "0.27"
copypasta = "0.8"
tui = "0.19.0"
arboard = "3.6.1"
html2text = "0.16.0"
scraper = "0.24.0"
